flexbox alignment issues for music player fixed

--- a/frontend/less/styles.less
+++ b/frontend/less/styles.less
@@ -318,59 +318,66 @@ html {
 
                     .albumTitle {
                         align-self: flex-end;
-                        text-align: right;
                         flex: 1 1 60%;
                         font-size: 13px;
+                        text-align: right;
                     }
 
                     .artistTitle {
                         align-self: flex-end;
-                        text-align: left;
                         flex: 1 1 40%;
                         font-size: 13px;
+                        text-align: left;
                     }
 
                     .songDuration {
                         align-self: flex-start;
-                        text-align: right;
-                        flex: 0 1 auto;
+                        flex: 1 1 10%;
                         font-size: 10px;
+                        text-align: right;
                     }
 
                     .songTitle {
                         align-self: flex-start;
-                        text-align: left;
                         flex-direction: row;
-                        flex: 1 0 80%;
+                        flex: 1 1 90%;
                         font-size: 13px;
+                        text-align: left;
                     }
                 }
 
                 li.playList-header {
                     .albumTitle {
-                        flex: 0 1 20%;
-                        text-align: center;
+                        align-self: flex-end;
+                        flex: 1 1 40%;
                         font-size: 13px;
+                        order: 4;
+                        text-align: right;
                     }
 
                     .artistTitle {
-                        flex: 1 1 10%;
-                        text-align: center;
+                        align-self: flex-end;
+                        flex: 1 1 40%;
                         font-size: 13px;
+                        order: 3;
+                        text-align: left;
                     }
 
                     .songDuration {
-                        flex: 0 1 auto;
-                        order: 4;
+                        align-self: flex-start;
+                        flex: 1 1 40%;
+                        font-size: 10px;
+                        order: 2;
                         text-align: right;
-                        font-size: 13px;
                     }
 
                     .songTitle {
-                        flex: 0 0 37%;
+                        align-self: flex-start;
+                        flex: 1 1 40%;
                         flex-direction: row;
                         text-align: left;
                         font-size: 13px;
+                        order: 1;
                     }
                 }
 
@@ -488,22 +495,23 @@ html {
                     overflow-y: auto;
 
                     .albumTitle {
-                        flex: 1 1 auto;
+                        flex: 1 1 26%;
                         text-align: left;
                     }
 
                     .artistTitle {
-                        flex: 1 1 auto;
+                        flex: 1 1 16%;
                         text-align: left;
                     }
 
                     .songDuration {
-                        flex: 0 1 auto;
+                        flex: 1 1 12%;
                         order: 4;
+                        text-align: right;
                     }
 
                     .songTitle {
-                        flex: 1 0 37%;
+                        flex: 1 0 45%;
                         flex-direction: row;
                     }
                 }
@@ -517,23 +525,23 @@ html {
 
                 li.playList-header {
                     .albumTitle {
-                        flex: 0 1 20%;
-                        text-align: center;
+                        flex: 1 1 26%;
+                        text-align: left;
                     }
 
                     .artistTitle {
-                        flex: 1 1 10%;
-                        text-align: center;
+                        flex: 1 1 16%;
+                        text-align: left;
                     }
 
                     .songDuration {
-                        flex: 0 1 auto;
+                        flex: 1 1 12%;
                         order: 4;
                         text-align: right;
                     }
 
                     .songTitle {
-                        flex: 0 0 37%;
+                        flex: 1 1 45%;
                         flex-direction: row;
                         text-align: left;
                     }
